DevTools: stub implementations for new methods in WebDevToolsAgent added in https://bugs.webkit.org/show_bug.cgi?id=31832

BUG=2084

Review URL: http://codereview.chromium.org/443022

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@33212 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 782470709a91882830754a9fff56b460a71bb9da